--- a/style.css
+++ b/style.css
@@ -1,1 +1,218 @@
-/* Add styles here */
+:root {
+    --bg: rgba(255, 255, 255, 0.282);
+    --primary: rgb(169, 189, 15);
+    --shd: rgba(245, 245, 245, 0.496);
+    --accent: rgb(10, 134, 21);
+}
+* {
+    /* font-family: "Lobster Two"; */
+    /* font-family: "Whisper"; */
+    font-family: "Josefin Sans";
+    margin: 0;
+    padding: 0;
+    /* box-sizing: border-box; */
+    outline: none;
+    border: none;
+    text-decoration: none;
+}
+body{
+    /* transition: .5s; */
+}
+#loading{
+    background-image: url(assets/IstiqomahMosque2.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-blend-mode:  soft-light;
+    opacity: .7;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    /* background: #ffffff; */
+    transition: .5s;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#loading img{
+    width: calc(15rem + 10vw);
+}
+nav{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+.nav{
+    width: 100%;
+}
+.nav-mobile{
+    height: 54px;
+    justify-content: center;
+    justify-items: center; 
+    align-items: center;
+    background-color: var(--primary);
+    bottom: 0;
+    width: 98%;
+    border-radius: 50px;
+    display: flex;
+    margin: 5px auto;
+    z-index: 10;
+}
+.nav-mobile a{
+    /* transition: 1s; */
+    margin: 24px;
+    z-index: 10;
+    /* background-color: antiquewhite; */
+}
+.nav-mobile a:not(.nav-active) img:hover{
+    transform: scale(1.2);
+    transition: .3s;
+}
+/* Nav Hover */
+.nav-mobile a:not(.nav-active)::before, .nav-mobile a:not(.nav-active)::after{
+    height: 0px;
+    transition: .5s;
+}
+.nav-mobile a:not(.nav-active):hover::before{
+    content: '';
+    position: absolute;
+    width: 45px;
+    height: 8px;
+    top: 6px;
+    margin-left: -9px;
+    border-radius: 0 0 50px 50px;
+    background-color: var(--accent);
+    box-shadow: 0 5px 10px 5px var(--shd);
+    /* transition: .5s; */
+}
+.nav-mobile a:not(.nav-active):hover::after{
+    content: '';
+    position: absolute;
+    width: 45px;
+    height: 8px;
+    bottom: 5px;
+    margin-left: -35px;
+    border-radius:50px 50px 0 0;
+    background-color: var(--accent);
+    box-shadow: 0 -5px 10px 5px var(--shd);
+    /* transition: .5s; */
+}
+
+    /* Nav Active Hover */
+.nav-active{
+    padding: 12px;
+    box-shadow: 0 0 0 3px var(--bg);
+    border-radius: 50%;
+    margin: 100px;
+    align-self: flex-end;
+    background-color: var(--primary);
+    z-index: 10;
+}
+.nav-active::before{
+    content: '';
+    position: absolute;
+    top: 5px;
+    margin-left: -28px;
+    width: 15px;
+    height: 15px;
+    background-color: var(--accent);
+    border-top-right-radius: 50px;
+    box-shadow: 0px -7px 0 0px var(--bg);
+    z-index: -9999;
+    background: transparent;
+}
+.nav-active::after{
+    content: '';
+    position: absolute;
+    top: 5px;
+    margin-left: 13px;
+    width: 15px;
+    height: 15px;
+    background-color: var(--accent);
+    border-top-left-radius: 50px;
+    box-shadow: 0px -7px 0px 0 var(--bg);
+    z-index: -9999;
+    background: transparent;
+}
+/* Hero Section */
+.hero{
+    min-height: 100vh;
+    display: flex;
+    top: 0;
+    background-image: url(assets/IstiqomahMosque2.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-position-x: center;
+    background-size:cover ;
+    transition: 6s;
+}
+.hero .content{
+    text-align: center;
+    margin: calc(5rem + 4vw) auto 0
+}
+.hero .content h1,h2,p{
+    font-family: "Lobster Two";
+}
+.hero h1{
+    color: rgba(0, 0, 0, 0.873);
+    font-style: italic;
+    /* text-shadow: 0 0 4px rgb(255, 255, 255); */
+    font-size:calc(3.5rem + 2vw);
+}
+.hero h2{
+    font-size: calc(2rem + 2vw);
+}
+.hero p{
+    margin: 1rem auto 2rem;
+    max-width: 50rem;
+    width: 60%;
+    font-size: calc(1.3rem + .5vw);  
+}
+.hero .content a{
+    margin-top: 6rem;
+    padding: 1rem 2rem;
+    background-color: var(--primary);
+    color: black;
+    font-size: 1.5rem;
+    border-radius: 50px;
+    font-weight: bold;
+    transform: scale(0);
+}
+.hero .content a:hover{
+    transform: scale(5);
+    transition: 1s;
+    box-shadow: 0 10px 10px var(--shd);
+    background-color:rgb(32, 59, 0);
+    color: rgba(255, 255, 255, 0.534);
+}
+
+
+/* Media Queries */
+
+/* Laptop */
+@media (max-width: 1366px) {
+    html{
+        font-size: 75%;
+    }
+}
+
+/* Tablet */
+@media (max-width: 768px) {
+    html{
+        font-size: 65%;
+    }
+
+}
+
+/* Mobile */
+@media (max-width: 450px) {
+    html{
+        font-size: 55%;
+    }
+    .nav-mobile{
+        display: flex;
+    }
+}
