--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ body{
     overflow-x: hidden;
     height: 5000px;
     /* transition: .5s; */
+    background-color: #000a20;
+
+
 }
 @font-face {
     font-family: "rascon";
@@ -63,13 +66,17 @@ body{
 }
 
 /* Navbar */
+header{
+    position: absolute;
+    z-index: 100;
+}
 nav{
     position: fixed;
     bottom: 0;
     width: 100%;
 }
 .nav{
-    z-index: 9999999999999;
+    z-index: 20;
     width: 100%;
 }
 /* Nav Desktop */
@@ -86,7 +93,7 @@ nav{
     background-color: var(--nav);
     backdrop-filter: blur(var(--blur));
     box-shadow: 0 5px 12px  var(--nav);
-    z-index: 999;
+    z-index: 10;
 }
 .nav-desktop::after{
     content: "";
@@ -111,7 +118,7 @@ nav{
     font-style: normal;
     font-weight: 800;
     transition: 1s;
-    z-index: 999;
+    z-index: 10;
 }
 .nav-desktop a::before,
 .nav-desktop a::after {
@@ -132,7 +139,7 @@ nav{
     position: absolute;
     font-family: rascon;
     font-size: 1.5rem;
-    margin-left: .4rem;
+    margin-left: .5rem;
     color: white;
     text-shadow: 0 0 5px rgb(246, 160, 0);
     transition: .5s;
@@ -147,7 +154,7 @@ nav{
 
 .logo{
     margin-top: 1rem;
-    z-index: 100;
+    z-index: 10;
 }
 .logo img:hover{
     transform: scale(1.1);
@@ -312,17 +319,12 @@ nav{
     background-color:rgb(56, 99, 3);
     color: rgba(255, 255, 255, 0.534);
 }
-.information p{
-    display: none;
-    margin: 2rem auto;
-    max-width: 50rem;
-    width: 60%;
-    font-size: calc(1.3rem + .5vw);  
-}
 /* About */
 .about{
-    box-shadow: 0 0 5px black;
-    margin: 4rem auto;
+    background-color: wheat;
+    box-shadow: 0 0 10px black;
+    border-radius: 10px;
+    margin: 5rem auto;
     max-width: 90%;
     padding: .5rem;
 }
@@ -332,37 +334,182 @@ nav{
 }
 #content{
     /* width: 68%; */   
-    margin: 1rem;
+    margin: .5rem;
 }
 #content article{
-    margin: 1rem auto;
+    position: relative;
+    margin: .5rem auto;
 }
+
+#content article img{
+    box-shadow: 0 5px 10px black;
+    border-radius: 10px 10px 0 0;
+    max-width: 100%;
+    max-height: 30rem;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+    height: auto;
+    transition: 1s;
+    z-index: -99;
+}
+#content article span{
+    color: rgba(255, 255, 255, 0.52);
+    position: absolute;
+    z-index: 30;
+    bottom: 58%;
+    font-size: 1rem;
+    background-color: rgba(255, 255, 255, 0.109);
+    padding: 2rem .5rem;
+    cursor: pointer;
+}
+#content article span:hover{
+    color: rgb(0, 0, 0);
+}
+#content article .previous{
+    left: 0;
+    border-radius: 0 20px 20px 0;
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0), 0 0 0 0 rgba(255, 255, 255, 0);
+    transition: .5s;
+}
+#content article .previous:hover{
+    transition: .3s;
+    background-color: rgba(255, 255, 255, 0.60);
+    box-shadow: 10px 0 0 10px rgba(255, 255, 255, 0.186), 20px 0 0 20px rgba(255, 255, 255, 0.20);
+}
+#content article .next{
+    right: 0;
+    border-radius: 20px 0 0 20px;
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0), 0 0 0 0 rgba(255, 255, 255, 0);
+    transition: .5s;
+}
+#content article .next:hover{
+    background-color: rgba(255, 255, 255, 0.60);
+    box-shadow: -10px 0 0 10px rgba(255, 255, 255, 0.186), -20px 0 0 20px rgba(255, 255, 255, 0.20);
+}
+#content article label{
+    position: absolute;
+    max-width: 40%;
+    font-size: 1.3rem;
+    backdrop-filter: blur(2px);
+    background-color: rgba(255, 255, 255, 0.263);
+    padding: 1rem;
+    border-radius: 10px;
+    bottom: 20%;
+    z-index: 10;
+    left: 2%;
+}
+#content article img:hover{
+    transform: scale(1.005);
+    transition: .5s;
+}
+
 #content article h2{ 
     font-size: 2rem;
     text-align: center;
     font-weight: bold;
-    margin: 1rem;
+    margin: 2rem auto auto;
 }
 #content article p{
     font-size: 1.4rem;
     margin: .4rem;
 }
 .aside-content{
-    /* min-width: 30%; */
+    padding: 1rem;
+    border-radius: 10px;
+    box-shadow: 0 0 16px black, 0 0 4px black inset;
+    margin: 1rem;
     max-width: 30%;
-    /* margin: 1rem; */
+    text-align: justify;
+    text-indent: 2rem;
+    font-size: 1.4rem;
 }
-.aside-content .map{
-    width: cover;
-    height: 10rem;
+.aside-content a iframe{
+    border-radius: 10px 10px 0 0;
+    width: 100%;
+    height: 20rem;
 }
-/* .aside-content h2{
+#m1{
+    display: none;
+    background-color: rgba(0, 0, 0, 0.306);
+    justify-items: center;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+}
+#m1:target{
+    flex-direction: column;
+    display: flex;
+}
+#m1 .map{
+    width: 90%;
+    height: 90%;
+    margin: auto;
+    border-radius: 20px;
+    box-shadow: 0 10px 10px black;
+}
+.close{
+    display: flex;
+    position: absolute;
+    top: 4rem;
+    right: 6vw;
+    text-shadow: 3px 3px 10px rgb(255, 0, 0);
+    box-shadow: 0px 0px 5px 3px black;
+    border: 2px solid rgba(255, 255, 255, 0.664);
+    padding: 3px 6px;
+    background-color: aliceblue;
+    font-size: 15px;
+    text-align: center;
+    color:rgb(255, 255, 255);
+    border-radius: 50px;
+    background-color: rgba(31, 30, 30, 0.801);
+    transition: 300ms;
+    z-index: 999999;
+}
+.close:hover{
+    border-color: rgb(3, 149, 206);
+    box-shadow: 0px 0px 10px 3px rgb(54, 0, 204);
+    color:rgba(230, 5, 5, 0.836) ;
+    text-shadow: 0 0 10px rgb(255, 255, 255);
+}
+.enter{
+    width: 2rem;
+    height: 2rem;
+    margin: .5rem;
+    text-align: center;
+    right: 0;
+    position: absolute;
+    transition: 1s;
+}
+.enter:hover{
+    transition: .5s;
+    transform: scale(1.2);
+}
+
+.overlay:target{
+    background-color: transparent;
+    display: block;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: absolute;
+    z-index: 9999;
+    background-color: rgb(255, 0, 0);
+}
+.aside-content h3{
     font-size: 2rem;
     text-align: center;
     font-weight: bold;
-    margin: 1rem;
-} */
-
+    margin: .5rem auto .1rem;
+}
+/* .aside
+ */
 
 /* Media Queries */
 
@@ -370,6 +517,12 @@ nav{
 @media (max-width: 1366px) {
     html{
         font-size: 75%;
+    }
+    #content article label{
+        bottom: 36%;
+    }
+    #content article label{
+        font-size: .9rem;
     }
 }
 
@@ -382,6 +535,20 @@ nav{
         font-size: 1.2rem;
         margin: 0 calc(1.5rem + 1vw);
     }
+    .about-content{
+        flex-direction: column;
+    }
+    .aside-content{
+        max-width: 100%;
+    }
+    #content article label{
+        bottom: 38%;
+    }
+    #content article label{
+        font-size: .9rem;
+    }
+
+
 }
 
 /* Mobile */
@@ -404,7 +571,9 @@ nav{
     .hero h1{
         font-size: 4rem;
     }
-    .information p{
-        display: block;
+    #content article label{
+        font-size: .7rem;
     }
+
+
 }
